[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lindblad-evolution"
version = "0.1.0"
description = "Differentiable Lindblad master equation solver with MPS support"
readme = "README.md"
authors = [{ name = "HAIS Contributors" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.urls]
"Homepage" = "https://github.com/bryceweiner/lindblad-evolution"

[tool.setuptools.packages.find]
where = ["src"]